update guide Arbitrum Governance

--- a/src/guides/main/arbitrum-governance-arbitrum-university-791.yaml
+++ b/src/guides/main/arbitrum-governance-arbitrum-university-791.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A deeper look into the Arbitrum Governance Sructure
-created: '2023-12-11T15:03:11.893Z'
+created: '2023-12-11T17:59:16.164Z'
 guideType: onboarding
 key: arbitrum-governance-arbitrum-university-791
 name: Arbitrum Governance
@@ -471,7 +471,7 @@ steps:
             key: B
           - content: They are elected by the DAO
             key: C
-          - content: They are appointed by the Arbitrum community
+          - content: 'They are appointed by the President '
             key: D
         content: Who elects the members of the Security Council?
         type: SingleChoice
@@ -493,7 +493,9 @@ steps:
               To subject them to a delay period, allowing users the choice to
               withdraw if they disagree
             key: D
-        content: What is the role of the Security Council in routine upgrades?
+        content: >-
+          What is the role of the Security Council in case of non-critical
+          upgrades?
         type: SingleChoice
         uuid: 6225a16e-6763-4ee7-9420-7d0d61808a96
         explanation: >-
