update guide Submitting a DAO proposal

--- a/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
+++ b/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn how to submit proposals in Arbitrum DAO
-created: '2023-12-11T15:51:28.676Z'
+created: '2023-12-12T11:47:18.294Z'
 guideType: onboarding
 key: submitting-a-dao-proposal-arbitrum-university-385
 name: Submitting a DAO proposal
@@ -246,7 +246,7 @@ steps:
       Adhering to these guidelines will help ensure that the proposal is clear,
       comprehensive, and aligned with the community's expectations, increasing
       its chances of being favorably received. In the diagram below, find the
-      outline of a dummy proposal for more refernce
+      outline of a dummy proposal for more reference.
     name: 'Proposal Structure '
     stepItems: []
     uuid: e874df3d-4d99-43fd-a236-1d9e72ec54c1
