update timelines arbitrum-big-launches-arbitrum-university

--- a/src/timelines/main/arbitrum-big-launches-arbitrum-university.yaml
+++ b/src/timelines/main/arbitrum-big-launches-arbitrum-university.yaml
@@ -1,8 +1,8 @@
 id: arbitrum-big-launches-arbitrum-university
 name: Arbitrum Big Launches
 excerpt: >-
-  Arbitrum ignites the blockchain world with groundbreaking launches, fueling
-  innovation and scalability in the crypto universe.
+  Arbitrum ignites the blockchain world with the fueling innovations and
+  scalability solutions.
 content: >-
   This timeline is an informative chronicle showcasing the key milestones and
   significant developments in the journey of Arbitrum. It highlights the major
