update timelines arbitrums-pathway-key-events-chronology-arbitrum-university

--- a/src/timelines/main/arbitrums-pathway-key-events-chronology-arbitrum-university.yaml
+++ b/src/timelines/main/arbitrums-pathway-key-events-chronology-arbitrum-university.yaml
@@ -1,9 +1,8 @@
 id: arbitrums-pathway-key-events-chronology-arbitrum-university
 name: 'Arbitrum''s Pathway: Key Events Chronology'
 excerpt: >-
-  "The Arbitrum ecosystem has evolved from initial concept to a leading Ethereum
-  scalability solution, marked by key milestones few of which are detailed in
-  this timeline.
+  The Arbitrum ecosystem has evolved into a leading scalability solution, marked
+  by key milestones which are detailed in this timeline.
 content: >-
   The Arbitrum ecosystem represents a significant advancement in the realm of
   blockchain technology, particularly in enhancing the scalability and
