update timelines arbitrums-pathway-key-events-chronology-arbitrum-university

--- a/src/timelines/main/arbitrums-pathway-key-events-chronology-arbitrum-university.yaml
+++ b/src/timelines/main/arbitrums-pathway-key-events-chronology-arbitrum-university.yaml
@@ -1,8 +1,8 @@
 id: arbitrums-pathway-key-events-chronology-arbitrum-university
-name: 'Arbitrum''s Pathway: Key Events Chronology'
+name: Arbitrum's Key Milestones
 excerpt: >-
   The Arbitrum ecosystem has evolved into a leading scalability solution, marked
-  by key milestones which are detailed in this timeline.
+  by milestones which are detailed in this timeline.
 content: >-
   The Arbitrum ecosystem represents a significant advancement in the realm of
   blockchain technology, particularly in enhancing the scalability and
