--- a/src/timelines/main/arbitrums-pathway-key-events-chronology-arbitrum-university.yaml
+++ b/src/timelines/main/arbitrums-pathway-key-events-chronology-arbitrum-university.yaml
@@ -1,8 +1,8 @@
 id: arbitrums-pathway-key-events-chronology-arbitrum-university
 name: Arbitrum's Key Milestones
 excerpt: >-
-  The Arbitrum ecosystem has evolved into a leading scalability solution, marked
-  by milestones which are detailed in this timeline.
+  Captures the key milestones in the evolution of Arbitrum ecosystem to become
+  the leading L2 solution.
 content: >-
   The Arbitrum ecosystem represents a significant advancement in the realm of
   blockchain technology, particularly in enhancing the scalability and
